cabal-version:       3.0
name:                hime
version:             0.1.0.0
license:             NONE

executable hime
  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0
                     , clock >= 0.8 && < 0.9
                     , typed-process >= 0.2.6 && < 0.3
  hs-source-dirs:      app
  default-language:    Haskell2010
